<resources>
    <string name="app_name">MuscleMate</string>
    <string name="action_settings">Settings</string>
    <string name="mainmenu_fragment_label">MuscleMate v0.0.1</string>
    <string name="chest_fragment_label">MuscleMate v0.0.1</string>
    <string name="arm_fragment_label">MuscleMate v0.0.1</string>
    <string name="leg_fragment_label">MuscleMate v0.0.1</string>
    <string name="ab_fragment_label">MuscleMate v0.0.1</string>
    <string name="back_fragment_label">MuscleMate v0.0.1</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="choose_chest_exercise">Choose a Chest exercise</string>
    <string name="choose_arm_exercise">Choose an Arm exercise</string>
    <string name="choose_leg_exercise">Choose a Leg exercise</string>
    <string name="choose_ab_exercise">Choose an Abdominal exercise</string>
    <string name="choose_back_exercise">Choose a Back exercise</string>
    <string name="hello_first_fragment">Welcome to MuscleMate</string>
    <string name="choose_muscle">Choose the muscle group you want to work</string>
    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="arms">Arms</string>
    <string name="legs">Legs</string>
    <string name="abs">Abs</string>
    <string name="bench">Bench Press</string>
    <string name="incline">Incline Press</string>
    <string name="flies">Flies</string>
    <string name="dips">Dips</string>
    <string name="pushups">Push-ups</string>
    <string name="curls">Curls</string>
    <string name="overhead">Overhead Press</string>
    <string name="chinups">Chin-ups</string>
    <string name="closegrip">Close-grip Press</string>
    <string name="military">Shoulder Press</string>
    <string name="latRaise">Lateral Raises</string>
    <string name="squat">Squat</string>
    <string name="rdl">Romanian Deadlift</string>
    <string name="split">Split Squat</string>
    <string name="bridge">Glute Bridges</string>
    <string name="lunge">Lunges</string>
    <string name="bendoverRow">Bend-over Row</string>
    <string name="pullup">Pull-Ups</string>
    <string name="deadlift">Deadlift</string>
    <string name="upright">Upright Row</string>
    <string name="dbRow">Dumbbell Row</string>
    <string name="crunch">Crunches</string>
    <string name="situp">Sit-Ups</string>
    <string name="plank">Plank</string>
    <string name="russianTwist">Russian Twist</string>
    <string name="legRaises">Leg Raises</string>
    <string name="hello_second_fragment">Are you ready to get SWOLE?! Arg: %1$s</string>
    <string name="page_title">MuscleMate</string>
    <string name="bench_desc">
        Lie on your back on a flat bench. Grip a barbell with hands slightly wider than shoulder width. The bar should be directly over the shoulders.

        Press your feet firmly into the ground and keep your hips on the bench throughout the entire movement.

        Keep your core engaged and maintain a neutral spine position throughout the movement. Avoid arching your back.

        Slowly lift the bar or dumbbells off the rack, if using. Lower the bar to the chest, about nipple level, allowing elbows to bend out to the side, about 45 degrees away from the body.

        Stop lowering when your elbows are just below the bench. Press feet into the floor as you push the bar back up to return to starting position.

        Perform 5 to 10 reps, depending on weight used. Perform up to 3 sets.</string>
    <string name="curl_desc">
        Stand with your feet shoulder-width apart and hold a dumbbell in each hand. Your palms should be facing forward and your arms should be straight down by your sides.

        Slowly raise one dumbbell towards your shoulder, while keeping your elbow close to your body. Your forearm should be perpendicular to the ground at the top of the movement.

        Hold the contraction for a second and then slowly lower the weight back down to the starting position.

        Repeat the same movement with the other arm.

        Continue to alternate arms until you have completed the desired number of reps.

        Aim for 8-12 reps for 2-3 sets, gradually increasing the weight as you become stronger.</string>
    <string name="overhead_desc">
        Stand or sit with your feet shoulder-width apart and hold a dumbbell in each hand. Your palms should be facing forward, and your arms should be bent at a 90-degree angle, with your elbows at shoulder height and your forearms pointing upwards.

        Lift the dumbbells up to shoulder level, making sure your elbows are directly under your wrists and your palms are facing forward.

        Take a deep breath and brace your core.

        Press the dumbbells overhead, extending your arms fully until they are straight up above your head. Make sure your shoulders are down and back, and your neck is neutral.

        Hold the top position for a second, then slowly lower the weights back down to your shoulders.

        Repeat the movement for the desired number of reps.

        Aim for 8-12 reps for 2-3 sets, gradually increasing the weight as you become stronger. </string>
    <string name="chin_ups_desc">
        Stand beneath a pull-up bar and reach up to grip the bar with your palms facing towards you. Your hands should be shoulder-width apart, or slightly closer if that feels more comfortable.
        Hang from the bar with your arms fully extended, your shoulders down and back, and your core engaged.
        Pull your body up towards the bar, keeping your elbows close to your sides and your chin above the bar.
        Hold the top position for a second, squeezing your shoulder blades together and keeping your core engaged.
        Slowly lower your body back down to the starting position, fully extending your arms.
        Repeat the movement for the desired number of reps.
        If you are new to chin-ups or find them challenging, you can try using a resistance band or a
        spotter to help you perform the movement. Aim for 8-12 reps for 2-3 sets, gradually increasing the number of reps
        or sets as you become stronger. Remember to keep proper form throughout the exercise, avoiding any swinging or kipping movements,
        to prevent injury and get the most out of the exercise. </string>
    <string name="close_grip_desc">
        Lie flat on a bench with your feet on the ground and your head at the end of the bench. Grab the bar with your palms facing towards your body, and your hands close together, just a few inches apart.

        Lift the bar off the rack and hold it above your chest with your arms fully extended.

        Slowly lower the bar towards your chest, keeping your elbows tucked in close to your sides. Your forearms should be perpendicular to the ground at the bottom of the movement.

        Hold the bottom position for a second, then press the bar back up to the starting position, fully extending your arms.

        Repeat the movement for the desired number of reps.

        Aim for 8-12 reps for 2-3 sets, gradually increasing the weight as you become stronger. Remember to keep proper form throughout the exercise, avoiding any bouncing or arching of the back, to prevent injury and get the most out of the exercise. Close-grip presses can be performed with a barbell or dumbbells, and can also be done on a Smith machine or with a resistance band.</string>
    <string name="shoulder_press_desc">
       Stand or sit with your feet shoulder-width apart, and hold a dumbbell in each hand at shoulder level. Your palms should be facing forward, and your elbows should be bent.

        Take a deep breath, brace your core, and lift the dumbbells up to shoulder level, making sure your elbows are directly under your wrists.

        Press the dumbbells up above your head, extending your arms fully until they are straight up. Make sure your shoulders are down and back, and your neck is neutral.

        Hold the top position for a second, then slowly lower the weights back down to your shoulders.

        Repeat the movement for the desired number of reps.

        Aim for 8-12 reps for 2-3 sets, gradually increasing the weight as you become stronger. </string>
    <string name="lateral_raise_desc">
        Stand with your feet shoulder-width apart, and hold a dumbbell in each hand at your sides. Your palms should be facing inward.

        Keeping your core engaged, slowly lift both dumbbells out to the sides until they are at shoulder level. Your arms should be straight, but not locked, and your elbows should be slightly bent.

        Hold the top position for a second, then slowly lower the weights back down to your sides.

        Repeat the movement for the desired number of reps.</string>
    <string name="incline_desc">

        Lie flat on an incline bench and set your hands just outside of shoulder width.

        Set your shoulder blades by pinching them together and driving them into the bench.

        Take a deep breath and allow your spotter to help you with the lift off in order to maintain tightness through your upper back.

        Let the weight settle and ensure your upper back remains tight after lift off.

        Inhale and allow the bar to descend slowly by unlocking the elbows.

        Lower the bar in a straight line to the base of the sternum (breastbone) and touch the chest.

        Push the bar back up in a straight line by pressing yourself into the bench, driving your feet into the floor for leg drive, and extending the elbows.

        Repeat for the desired number of repetitions.</string>
    <string name="flies_desc">
        Pick up the dumbbells off the floor using a neutral grip (palms facing in). Position the ends of the dumbbells in your hip crease, and sit down on the bench.

        To get into position, lay back and keep the weights close to your chest. Once you are in position, take a deep breath, then press the dumbbells to lockout at the top.

        Slightly retract your shoulder blades, unlock your elbows, and slowly lower the dumbbells laterally while maintaining the angle at your elbow.

        Once the dumbbells reach chest level, reverse the movement by squeezing your pecs together and bringing the dumbbells back to their starting position.

        Without allowing the dumbbells to touch, start the next repetition, and continue until the set is completed.

</string>
    <string name="dips_desc">
        Step up on the dip station (if possible) and position your hands with a neutral grip.

        Initiate the dip by unlocking the elbows and slowly lowering the body until the forearms are almost parallel with the floor.

        Control the descent to parallel and then drive back to the starting position by pushing through the palms.

        Repeat for the desired number of repetitions.</string>
    <string name="push_ups_desc">
        Assume a quadruped position on the floor with your hands under your shoulders, toes tucked, and knees under hips.

        Extend one leg at a time and assume a pushup position with the legs straight, elbows extended, and head in a neutral position looking at the floor.

        Slowly descend to the floor by retracting the shoulder blades and unlocking the elbows.

        Descend until the upper arms are parallel or your chest touches the floor.

        Push back to the starting point by extending the elbows and driving your palms into the floor.

        Repeat for the desired number of repetitions.</string>
</resources>